syntax = "proto3";

package social.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "social/v1/comment.proto";
import "social/v1/user.proto";

option go_package = "subredditv1";

message Post {
  string title = 1;
  int32 id = 2;
  social.v1.User author = 3;
  repeated social.v1.Comment comments = 4;
  Subreddit subreddit = 5;
  string content = 6;
  google.protobuf.Timestamp created_at = 7;
}

message GetPostRequest {
  int32 id = 1 [(buf.validate.field).required = true];
}

message GetPostResponse {
  Post post = 1;
}

message CreatePostRequest {
  Post post = 1;
}

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
}

message Subreddit {
  string name = 1;
  repeated Post posts = 2;
  social.v1.User creator = 3;
}

message GetSubredditRequest {
  Subreddit subreddit = 1;
}

message GetSubredditResponse {
  Subreddit subreddit = 1;
}

service SubredditService {
  rpc GetSubreddit(GetSubredditRequest) returns (GetSubredditResponse);
}
